--- a/Exercise Files/index.html
+++ b/Exercise Files/index.html
@@ -11,6 +11,21 @@
  <link rel="stylesheet" type="text/css" href="star.css" />
 </head>
 <body>
-
+    <div id="topnav">
+        <div id="nav-logomark"></div>
+        <h1 id="nav-text">Big Star Collectibles</h1>
+    </div>
+    <div id="content">
+        <img id="offer-image" src="assets/offer.png" />
+        <p id="offer-text">Thank you for joining!<br/>
+            Big Star Collectibles offers you a welcome gift to show our appreciation.</p>
+        <button type="button" id="claim-button">Claim Your Gift</button>
+    </div>
+    <div id="footer">
+        <p id="text-footer">
+            © Big Star Collectibles, Inc. | Privacy | Terms<br/>
+            This is a fictitious company created by LinkedIn Corporation, or its affiliates, solely for the creation and development of educational training materials. Any resemblance to real products or services is purely coincidental. Information provided about the products or services is also fictitious and should not be construed as representative of actual products or services on the market in a similar product or service category.
+        </p>
+    </div>
 </body>
 </html>
